--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^17.3.1",
+    "@react-native-firebase/auth": "^17.3.1",
+    "@react-navigation/native": "^6.1.5",
+    "@react-navigation/native-stack": "^6.9.11",
+    "@react-navigation/stack": "^6.3.15",
+    "@types/firebase": "^3.2.1",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
